code/syntax.output
状态 25 conflicts: 2 shift/reduce
状态 29 conflicts: 2 shift/reduce
状态 39 conflicts: 11 shift/reduce
状态 62 conflicts: 11 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag
   13                | STRUCT error

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP error

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | LC DefList StmtList
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier error SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | NOT Exp
   55    | MINUS Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT

   63 Args: Exp COMMA Args
   64     | Exp
   65     | Exp error Args


Terminals, with rules where they appear

$end (0) 0
error (256) 13 21 27 36 40 65
INT (258) 18 61
FLOAT (259) 62
RELOP (260) 48
ID (261) 14 16 17 19 20 21 56 57 59 60
TYPE (262) 9
SEMI (263) 4 5 30 32 36 39 40
ASSIGNOP (264) 44 45
COMMA (265) 8 22 42 63
PLUS (266) 49
MINUS (267) 50 55
STAR (268) 51
DIV (269) 52
AND (270) 46
NOT (271) 54
OR (272) 47
LP (273) 19 20 21 33 34 35 53 56 57
RP (274) 19 20 33 34 35 53 56 57
LB (275) 18 58
RB (276) 18 58
LC (277) 11 25 26
RC (278) 11 25 27
STRUCT (279) 11 12 13
RETURN (280) 32
IF (281) 33 34
ELSE (282) 34
WHILE (283) 35
DOT (284) 59
ERROR_PRE (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    左： 0
Program (33)
    左： 1, 右： 0
ExtDefList (34)
    左： 2 3, 右： 1 2
ExtDef (35)
    左： 4 5 6, 右： 2
ExtDecList (36)
    左： 7 8, 右： 4 8
Specifier (37)
    左： 9 10, 右： 4 5 6 24 39 40
StructSpecifier (38)
    左： 11 12 13, 右： 10
OptTag (39)
    左： 14 15, 右： 11
Tag (40)
    左： 16, 右： 12
VarDec (41)
    左： 17 18, 右： 7 8 18 24 43 44
FunDec (42)
    左： 19 20 21, 右： 6
VarList (43)
    左： 22 23, 右： 19 22
ParamDec (44)
    左： 24, 右： 22 23
CompSt (45)
    左： 25 26 27, 右： 6 31
StmtList (46)
    左： 28 29, 右： 25 26 28
Stmt (47)
    左： 30 31 32 33 34 35 36, 右： 28 33 34 35
DefList (48)
    左： 37 38, 右： 11 25 26 37
Def (49)
    左： 39 40, 右： 37
DecList (50)
    左： 41 42, 右： 39 42
Dec (51)
    左： 43 44, 右： 41 42
Exp (52)
    左： 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62, 右：
    30 32 33 34 35 44 45 46 47 48 49 50 51 52 53 54 55 58 59 63 64
    65
Args (53)
    左： 63 64 65, 右： 56 63 65


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag
   13                | STRUCT . error

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 15 (OptTag)

    OptTag  转到状态 10
    Tag     转到状态 11


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 13
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 StructSpecifier: STRUCT error .

    $default  reduce using rule 13 (StructSpecifier)


State 9

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 10

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 11

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  接受


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . LP error

    LP  shift, and go to state 20

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 24
    LC     shift, and go to state 25

    CompSt  转到状态 26


State 19

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 28
    Def              转到状态 29


State 20

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   21       | ID LP . error

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        转到状态 32
    StructSpecifier  转到状态 7
    VarList          转到状态 33
    ParamDec         转到状态 34


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  转到状态 36
    VarDec      转到状态 17


State 23

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


State 24

   27 CompSt: error . RC

    RC  shift, and go to state 38


State 25

   25 CompSt: LC . DefList StmtList RC
   26       | LC . DefList StmtList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    TYPE      [reduce using rule 38 (DefList)]
    STRUCT    [reduce using rule 38 (DefList)]
    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 39
    Def              转到状态 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   39 Def: Specifier . DecList SEMI
   40    | Specifier . error SEMI

    error  shift, and go to state 40
    ID     shift, and go to state 35

    VarDec   转到状态 41
    DecList  转到状态 42
    Dec      转到状态 43


State 28

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 44


State 29

   37 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    TYPE      [reduce using rule 38 (DefList)]
    STRUCT    [reduce using rule 38 (DefList)]
    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 45
    Def              转到状态 29


State 30

   21 FunDec: ID LP error .

    $default  reduce using rule 21 (FunDec)


State 31

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 32

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  转到状态 46


State 33

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 47


State 34

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 48

    $default  reduce using rule 23 (VarList)


State 35

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 36

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 37

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 49


State 38

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 39

   25 CompSt: LC DefList . StmtList RC
   26       | LC DefList . StmtList

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 25
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    $end    reduce using rule 29 (StmtList)
    error   [reduce using rule 29 (StmtList)]
    INT     [reduce using rule 29 (StmtList)]
    FLOAT   [reduce using rule 29 (StmtList)]
    ID      [reduce using rule 29 (StmtList)]
    TYPE    reduce using rule 29 (StmtList)
    MINUS   [reduce using rule 29 (StmtList)]
    NOT     [reduce using rule 29 (StmtList)]
    LP      [reduce using rule 29 (StmtList)]
    LC      [reduce using rule 29 (StmtList)]
    RC      reduce using rule 29 (StmtList)
    STRUCT  reduce using rule 29 (StmtList)
    RETURN  [reduce using rule 29 (StmtList)]
    IF      [reduce using rule 29 (StmtList)]
    ELSE    reduce using rule 29 (StmtList)
    WHILE   [reduce using rule 29 (StmtList)]

    CompSt    转到状态 60
    StmtList  转到状态 61
    Stmt      转到状态 62
    Exp       转到状态 63


State 40

   40 Def: Specifier error . SEMI

    SEMI  shift, and go to state 64


State 41

   18 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 23

    $default  reduce using rule 43 (Dec)


State 42

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


State 43

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 41 (DecList)


State 44

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 45

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 46

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 24 (ParamDec)


State 47

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 48

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 32
    StructSpecifier  转到状态 7
    VarList          转到状态 68
    ParamDec         转到状态 34


State 49

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 50

   27 CompSt: error . RC
   36 Stmt: error . SEMI

    SEMI  shift, and go to state 69
    RC    shift, and go to state 38


State 51

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 52

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 53

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 70

    $default  reduce using rule 60 (Exp)


State 54

   55 Exp: MINUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 71


State 55

   54 Exp: NOT . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 72


State 56

   53 Exp: LP . Exp RP

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 73


State 57

   32 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 74


State 58

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 59

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 60

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 61

   25 CompSt: LC DefList StmtList . RC
   26       | LC DefList StmtList .

    RC  shift, and go to state 77

    $default  reduce using rule 26 (CompSt)


State 62

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 25
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    $end    reduce using rule 29 (StmtList)
    error   [reduce using rule 29 (StmtList)]
    INT     [reduce using rule 29 (StmtList)]
    FLOAT   [reduce using rule 29 (StmtList)]
    ID      [reduce using rule 29 (StmtList)]
    TYPE    reduce using rule 29 (StmtList)
    MINUS   [reduce using rule 29 (StmtList)]
    NOT     [reduce using rule 29 (StmtList)]
    LP      [reduce using rule 29 (StmtList)]
    LC      [reduce using rule 29 (StmtList)]
    RC      reduce using rule 29 (StmtList)
    STRUCT  reduce using rule 29 (StmtList)
    RETURN  [reduce using rule 29 (StmtList)]
    IF      [reduce using rule 29 (StmtList)]
    ELSE    reduce using rule 29 (StmtList)
    WHILE   [reduce using rule 29 (StmtList)]

    CompSt    转到状态 60
    StmtList  转到状态 78
    Stmt      转到状态 62
    Exp       转到状态 63


State 63

   30 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    RELOP     shift, and go to state 79
    SEMI      shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    LB        shift, and go to state 88
    DOT       shift, and go to state 89


State 64

   40 Def: Specifier error SEMI .

    $default  reduce using rule 40 (Def)


State 65

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 90


State 66

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 67

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   转到状态 41
    DecList  转到状态 91
    Dec      转到状态 43


State 68

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 69

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 70

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 92

    Exp   转到状态 93
    Args  转到状态 94


State 71

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    STAR  shift, and go to state 84
    DIV   shift, and go to state 85
    LB    shift, and go to state 88
    DOT   shift, and go to state 89

    $default  reduce using rule 55 (Exp)


State 72

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    LB   shift, and go to state 88
    DOT  shift, and go to state 89

    $default  reduce using rule 54 (Exp)


State 73

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    RP        shift, and go to state 95
    LB        shift, and go to state 88
    DOT       shift, and go to state 89


State 74

   32 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    RELOP     shift, and go to state 79
    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    LB        shift, and go to state 88
    DOT       shift, and go to state 89


State 75

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 97


State 76

   35 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 98


State 77

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 78

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 79

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 99


State 80

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 81

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 100


State 82

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 101


State 83

   50 Exp: Exp MINUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 102


State 84

   51 Exp: Exp STAR . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 103


State 85

   52 Exp: Exp DIV . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 104


State 86

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 105


State 87

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 106


State 88

   58 Exp: Exp LB . Exp RB

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  转到状态 107


State 89

   59 Exp: Exp DOT . ID

    ID  shift, and go to state 108


State 90

   44 Dec: VarDec ASSIGNOP Exp .
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    LB        shift, and go to state 88
    DOT       shift, and go to state 89

    $default  reduce using rule 44 (Dec)


State 91

   42 DecList: Dec COMMA DecList .

    $default  reduce using rule 42 (DecList)


State 92

   57 Exp: ID LP RP .

    $default  reduce using rule 57 (Exp)


State 93

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63 Args: Exp . COMMA Args
   64     | Exp .
   65     | Exp . error Args

    error     shift, and go to state 109
    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 81
    COMMA     shift, and go to state 110
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    LB        shift, and go to state 88
    DOT       shift, and go to state 89

    RP  reduce using rule 64 (Args)


State 94

   56 Exp: ID LP Args . RP

    RP  shift, and go to state 111


State 95

   53 Exp: LP Exp RP .

    $default  reduce using rule 53 (Exp)


State 96

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 97

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    RP        shift, and go to state 112
    LB        shift, and go to state 88
    DOT       shift, and go to state 89


State 98

   35 Stmt: WHILE LP Exp . RP Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    RP        shift, and go to state 113
    LB        shift, and go to state 88
    DOT       shift, and go to state 89


State 99

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   48    | Exp RELOP Exp .
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    PLUS   shift, and go to state 82
    MINUS  shift, and go to state 83
    STAR   shift, and go to state 84
    DIV    shift, and go to state 85
    LB     shift, and go to state 88
    DOT    shift, and go to state 89

    $default  reduce using rule 48 (Exp)


State 100

   45 Exp: Exp . ASSIGNOP Exp
   45    | Exp ASSIGNOP Exp .
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    LB        shift, and go to state 88
    DOT       shift, and go to state 89

    $default  reduce using rule 45 (Exp)


State 101

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   49    | Exp PLUS Exp .
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    STAR  shift, and go to state 84
    DIV   shift, and go to state 85
    LB    shift, and go to state 88
    DOT   shift, and go to state 89

    $default  reduce using rule 49 (Exp)


State 102

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   50    | Exp MINUS Exp .
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    STAR  shift, and go to state 84
    DIV   shift, and go to state 85
    LB    shift, and go to state 88
    DOT   shift, and go to state 89

    $default  reduce using rule 50 (Exp)


State 103

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   51    | Exp STAR Exp .
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    LB   shift, and go to state 88
    DOT  shift, and go to state 89

    $default  reduce using rule 51 (Exp)


State 104

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   52    | Exp DIV Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    LB   shift, and go to state 88
    DOT  shift, and go to state 89

    $default  reduce using rule 52 (Exp)


State 105

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   46    | Exp AND Exp .
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
